--- a/clube-do-bug-ui/src/styles/spacing.css
+++ b/clube-do-bug-ui/src/styles/spacing.css
@@ -39,11 +39,11 @@
 }
 
 .margin-t-29 {
-  margin-top: 29px;
+  margin-top: 2.9rem;
 }
 
 .margin-r-31 {
-  margin-top: 31px;
+  margin-top: 3.1rem;
 }
 
 .margin-t-32 {
@@ -76,4 +76,8 @@
 
 .margin-t-249 {
   margin-top: 24.9rem;
+}
+
+.margin-b-37 {
+  margin-bottom: 3.7rem;
 }
